--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,12 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.8</version>
-			<scope>test</scope>
+			<!-- <scope>test</scope> -->
 		</dependency>
 	</dependencies>
 	<build>
+		 <sourceDirectory>src</sourceDirectory> 
+		
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
