--- a/EdurekaSelGridDockerCompose.yml
+++ b/EdurekaSelGridDockerCompose.yml
@@ -19,3 +19,30 @@ services:
     environment:
       - HUB_PORT_4444_TCP_ADDR=selenium-hub
       - HUB_PORT_4444_TCP_PORT=4444
+      
+# version: "3"
+# services:
+#   selenium-hub:
+#     image: selenium/hub:3.0.1-aluminum
+#     container_name: selenium-hub
+#     ports:
+#       - "4444:4444"
+#   chrome:
+#     image: selenium/node-chrome-debug:3.0.1-aluminum
+#     depends_on:
+#       - selenium-hub
+#     ports:
+#       - 5900
+#     environment:
+#       - HUB_PORT_4444_TCP_ADDR=selenium-hub
+#       - HUB_PORT_4444_TCP_PORT=4444
+#   firefox:
+#     image: selenium/node-firefox-debug:3.0.1-aluminum
+#     depends_on:
+#       - selenium-hub
+#     ports:
+#       - 5900
+#     environment:
+#       - HUB_PORT_4444_TCP_ADDR=selenium-hub
+#       - HUB_PORT_4444_TCP_PORT=4444
+      
