--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 	</dependencies>
 	<build>
 		 <sourceDirectory>src</sourceDirectory> 
-		
+		<pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -75,8 +75,29 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.1</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+							<tasks>
+								<echo>Displaying value of pom.xml element</echo>
+								<echo>[suiteXMLFile] ${suiteXMLFile}</echo>
+							</tasks>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+            
 			
 		</plugins>
+		</pluginManagement>
 		<finalName>eduapp</finalName>
 	</build>
 </project>
